--- a/vivendoumconto.html
+++ b/vivendoumconto.html
@@ -10,7 +10,7 @@
 <body>
     <header> 
 
-        <img src="fotos/IMG_1083.PNG" alt="logo">
+        <img src="fotos/IMG_1083.PNG" alt="logo ilustrado">
         
             <h1>Vivendo um conto</h1>
             <p>Entre na magia de cada história ♥</p>
